inputs paddings fixed, arrangement of blocks on mobile devices changed

--- a/src/client/styles/base-position.css
+++ b/src/client/styles/base-position.css
@@ -5,7 +5,6 @@
 
   div.content {
     padding: 10px 18px;
-    flex-direction: column;
   }
 }
 
